# Bazelize

./: .gitignore  .swiftformat  LICENSE  Makefile  Package.resolved  Package.swift  Podfile.lock.md  Podfile.md  README.md  git_release.py
.github/workflows/: swift.yml
Sources/BazelRules/: LoadableRule.swift  Rules+Apple.swift  Rules+Builtin.swift  Rules+Config.swift  Rules+Objc.swift  (+3 more)
docs/: Dependecy_ZH.md  Design.md  Design_ZH.md  Podfile.md  Rules.md  RxSwift+PodToBUILD.md  SPM.md
fixture/iOS/: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  Package.resolved  Package.swift  WORKSPACE  bazel-SwiftUI  config.bazelrc  swift_deps.bzl  swift_deps_index.json
fixture/iOS/Example/: BUILD  ContentView.swift  ExampleApp.swift  Test.swift
fixture/iOS/Example.xcodeproj/: project.pbxproj
fixture/iOS/Example.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
fixture/iOS/Example/Assets.xcassets/AppIcon.appiconset/: Contents.json
fixture/iOS/Example/Assets.xcassets/bazel.imageset/: Contents.json
fixture/iOS/Example/en.lproj/: Localizable.strings
fixture/iOS/Example/zh-Hant.lproj/: Localizable.strings
fixture/iOS/ExampleTests/: BUILD  ExampleTests.swift
fixture/iOS/ExampleUITests/: BUILD  ExampleUITests.swift  ExampleUITestsLaunchTests.swift
fixture/iOS/Framework1/: BUILD  Framework1.h  Test.swift
fixture/iOS/Framework1Tests/: BUILD  Framework1Tests.swift
fixture/iOS/Framework2/: BUILD  Framework2.h  Test.swift
fixture/iOS/Framework2Tests/: BUILD  Framework2Tests.swift
fixture/iOS/Framework3/: BUILD  Framework.h  Framework.m  Framework3.h
fixture/iOS/Framework3Tests/: BUILD  Framework3Tests.m
fixture/iOS/Local1/: Package.swift  README.md
fixture/iOS/Local1/Sources/LocalTarget1/: LocalTarget1.swift
fixture/iOS/Local1/Sources/LocalTarget2/: LocalTarget2.swift
fixture/iOS/Local1/Sources/LocalTarget3/include/: LocalTarget3.h
fixture/iOS/Local1/Sources/LocalTarget3/src/: LocalTarget3.m
fixture/iOS/Local1/Tests/Local1Tests/: Local1Tests.swift
fixture/iOS/Local2/: Package.swift  README.md
fixture/iOS/Local2/Sources/Local2/: Local2.swift
fixture/iOS/Local2/Tests/Local2Tests/: Local2Tests.swift
fixture/iOS/SVProgressHUD.xcframework/: Info.plist
fixture/iOS/SVProgressHUD.xcframework/ios-arm64_armv7/SVProgressHUDShare.framework/: Info.plist  SVProgressHUDShare
fixture/iOS/SVProgressHUD.xcframework/ios-arm64_armv7/SVProgressHUDShare.framework/Modules/: module.modulemap
fixture/iOS/SVProgressHUD.xcframework/ios-arm64_x86_64-simulator/SVProgressHUDShare.framework/: Info.plist  SVProgressHUDShare
fixture/iOS/SVProgressHUD.xcframework/ios-arm64_x86_64-simulator/SVProgressHUDShare.framework/_CodeSignature/: CodeResources
fixture/iOS/Static/: BUILD  Static.swift
fixture/iOS/Static2/: BUILD  Static2.h  Static2.m
(+207 files in other folders)
