# Generated using Bazelize 0.0.4 - https://github.com/XCodeBazelize/Bazelize

module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "bazel_skylib",
    # repo_name = None,
)

bazel_dep(
    name = "rules_apple",
    version = "rules_apple",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(name = "rules_swift", version = "1.5.0", repo_name = "build_bazel_rules_swift")

bazel_dep(name = "rules_xcodeproj", version = "0.12.3")

bazel_dep(name = "rules_apple_linker", version = "0.3.0")